# NeptuneOS

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  create-projects.sh
Common/: CMakeLists.txt
Common/Containers/: Vector.h
Common/Math/: Bits.h
Common/Templates/: EnableIf.h  Move.h  RemoveCV.h  RemoveReference.h  Swap.h  TypeTraits.h  TypedTransfer.h
Common/Utils/: Memory.cpp  Memory.h
Kernel/: Assert.h  CMakeLists.txt  CompilerStubs.cpp  Panic.cpp  Panic.h  linker.ld
Kernel/Arch/: BootMemory.h  CPU.h  Memory.h
Kernel/Arch/amd64/: BootMemory.h  CPU.asm  CPU.cpp  CPU.h  Memory.h
Kernel/Boot/: Main.cpp
Kernel/Boot/amd64/: boot.asm
Kernel/IO/: Console.cpp  Console.h  Serial.cpp  Serial.h
Kernel/Memory/: KMalloc.cpp  KMalloc.h  PhysicalMemoryManager.cpp  PhysicalMemoryManager.h  PhysicalPageManager.cpp  PhysicalPageManager.h
Scripts/: clean.sh  gdb.sh  grub.cfg  image.sh  run-debug.sh  run.sh
Scripts/CMake/: CMakeToolchain.txt  common_compiler_options.cmake  common_linker_options.cmake
Tests/: CMakeLists.txt
Tests/Common/Containers/: TestVector.cpp
Tests/Common/Math/: TestBits.cpp
Tests/Common/Templates/: TestTypeTraits.cpp  TestTypedTransfer.cpp
Tests/Common/Utils/: TestMemory.cpp
Toolchain/: build-toolchain.sh  config.gcc.patch  t-x86_64-elf
